
2018-03-09  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* Some changes in code and changed plugin button tip

2018-03-08  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* Code otimizations

2018-03-05  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* Código com menor consumo de memória, mas ainda insatisfatório: TODO usar array

2018-02-27  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* launchapps.c (lapps_update_recent): using g_slice_alloc
	* Using g_slice_alloc...
	* Changed char to const char

2018-02-23  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* Code optimizations done

2018-02-22  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* Code revision

2018-02-21  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* Code revision

2018-02-20  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* Code revision
	* Gdk headers

2018-02-18  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* launchapps.c (lapps_icon_lookup, lapps_label_lookup): functions to get icons and labels

2018-02-17  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* Pre-release: v2.0.0
	* launchapps.c (lapps_create_table): automatic update of tables: icons and labels
	* launchapps.c (lapps_tables_init): putting the images in memory to improve performance

2018-02-16  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* launchapps.c (lapps_app_list_remove_dup): Separate function to remove duplicates
	* Improved functions: lapps_application_icon, lapps_create_table, lapps_app_list(remove duplicates)

2018-02-15  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* Saving the icons for best performance(test)

2018-02-11  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* launchapps.c (lapps_show_default_page): Added error icon for app not found

2018-02-09  Alexandre C Vieira <acamargo.vieira@gmail.com>

	* Compatibility with the common resolutions tested: TODO: more tests

2018-02-08  Alexandre C Vieira <acamargo.vieira@gmail.com>
